# YtDlpGui

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
docs/: index.html
src/: MainWindow.cpp  MainWindow.h  main.cpp
